# takkeli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  explore_features_neutral.py  filtering_log.txt  pyproject.toml  search_neuronpedia.py
.factory/: init.sh  services.yaml
.factory/skills/ml-engineer/: SKILL.md
.factory/skills/workspace-builder/: SKILL.md
.factory/validation/core-architecture/scrutiny/: synthesis.json
.factory/validation/core-architecture/scrutiny/reviews/: bitnet-bitlinear.json  drllm-routing.json  mla-indexcache.json
.factory/validation/core-architecture/user-testing/: synthesis.json
.factory/validation/core-architecture/user-testing/flows/: bitlinear.json  drllm-model.json  mla-indexcache.json
.factory/validation/cross-area/scrutiny/: synthesis.json
.factory/validation/cross-area/scrutiny/reviews/: cross-area-integration.json
.factory/validation/cross-area/user-testing/: synthesis.json
.factory/validation/cross-area/user-testing/flows/: data-checkpoint-gguf.json  integrity-static-deps.json
.factory/validation/inference-export/scrutiny/: synthesis.json
.factory/validation/inference-export/scrutiny/reviews/: gguf-export.json  inference-evaluation.json
.factory/validation/inference-export/user-testing/: synthesis.json
.factory/validation/inference-export/user-testing/flows/: gguf-export.json  inference-evaluation.json
.factory/validation/optimizer-memory-stack/scrutiny/: synthesis.json
.factory/validation/optimizer-memory-stack/scrutiny/reviews/: gwt-wavelet-transform.json  liger-lema-integration.json  normuon-optimizer.json
.factory/validation/optimizer-memory-stack/user-testing/: synthesis.json
.factory/validation/optimizer-memory-stack/user-testing/flows/: gwt.json  lema-training.json  liger.json  normuon.json
.factory/validation/rlhf-alignment/scrutiny/: synthesis.json
.factory/validation/rlhf-alignment/scrutiny/reviews/: reinforcepp-alignment.json
.factory/validation/rlhf-alignment/user-testing/: synthesis.json
.factory/validation/rlhf-alignment/user-testing/flows/: align-algorithm.json  align-config.json
.factory/validation/sae-data-filter/scrutiny/: synthesis.json
.factory/validation/sae-data-filter/scrutiny/reviews/: sae-loader-inference.json  sae-streaming-filter.json
.factory/validation/sae-data-filter/user-testing/: synthesis.json
.factory/validation/sae-data-filter/user-testing/flows/: sae-loader-inference.json  sae-streaming-filter.json
.factory/validation/uv-workspace/scrutiny/: synthesis.json
.factory/validation/uv-workspace/scrutiny/reviews/: workspace-member-pyprojects.json  workspace-root-config.json
.factory/validation/uv-workspace/user-testing/: synthesis.json
.factory/validation/uv-workspace/user-testing/flows/: uv-workspace-terminal.json
01_data_filtering/: pyproject.toml
01_data_filtering/scripts/: explore_features.py  filter_pipeline.py  keyword_filter.py
01_data_filtering/src/takkeli_filtering/: __init__.py  config.py  hf_transport.py  run_filter.py  sae_inference.py  sae_loader.py  streaming_filter.py
01_data_filtering/tests/: test_data_filtering.py  test_gpu_filtering.py  test_sae_inference.py  test_streaming.py
02_pretraining/: pyproject.toml
02_pretraining/src/takkeli_pretrain/: __init__.py  bitlinear.py  drllm.py  gwt.py  indexcache.py  lema.py  liger_ops.py  mla.py  model.py  normuon.py  training_loop.py
02_pretraining/tests/: test_bitlinear.py  test_composite_optimizer.py  test_drllm.py  test_gpu_pretraining.py  test_gwt.py  test_indexcache.py  test_lema.py  test_liger_kernels.py  test_mla.py  test_model.py  test_normuon.py  test_pretraining.py  test_training_loop.py
03_alignment/: pyproject.toml
03_alignment/src/takkeli_align/: __init__.py  config.py  pipeline.py  reinforce_pp.py
03_alignment/tests/: test_alignment.py  test_config.py  test_gpu_alignment.py  test_reinforcepp.py
04_inference_eval/: pyproject.toml
04_inference_eval/scripts/: comparison.py  evaluation.py  inference.py
04_inference_eval/src/takkeli_inference/: __init__.py  comparison.py  evaluation.py  gguf_export.py  inference.py
04_inference_eval/tests/: test_evaluation.py  test_gguf_export.py  test_gpu_export.py  test_inference.py
design/: llm-tech.md  validation-contract.md
scripts/: test_alignment_gpu.py  test_export_inference_gpu.py  test_pretraining_gpu.py
tests/: test_cross_area.py  test_gpu_smoke.py  test_integration.py
