[project]
name = "takkeli"
version = "0.1.0"
description = "Consciousness Filter LLM Training Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "takkeli-filtering",
    "takkeli-pretrain",
    "takkeli-align",
    "takkeli-inference",
]

# GPU extras: provide torch with the appropriate accelerator index.
[project.optional-dependencies]
rocm = [
    "torch>=2.1.0",
]
cuda = [
    "torch>=2.1.0",
]

[tool.uv.workspace]
members = [
    "01_data_filtering",
    "02_pretraining",
    "03_alignment",
    "04_inference_eval",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0",
    "ty>=0.0.1-alpha.21",
    "tomli>=2.0; python_version < '3.11'",
]

# GPU accelerator extras are mutually exclusive: ROCm (AMD local) vs CUDA (NVIDIA cloud).
# Without extras, uv sync resolves all members without GPU packages (CPU-only).
[tool.uv]
conflicts = [
    [{ extra = "rocm" }, { extra = "cuda" }],
]

# PyTorch wheel index. The generic URL serves CPU-only wheels.
# For GPU variants, override with --index-url on the CLI:
#   Local (AMD):  uv sync --extra rocm --index-url https://download.pytorch.org/whl/rocm6.2
#   Cloud (NVIDIA): uv sync --extra cuda --index-url https://download.pytorch.org/whl/cu124
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
explicit = true

[tool.uv.sources]
takkeli-filtering = { workspace = true }
takkeli-pretrain = { workspace = true }
takkeli-align = { workspace = true }
takkeli-inference = { workspace = true }

# Torch resolves from the pytorch index (CPU by default, GPU via --index-url).
torch = [
    { index = "pytorch" },
]

# --- Ruff: linting and formatting ---

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pytest ---

[tool.pytest.ini_options]
testpaths = [
    "01_data_filtering/tests",
    "02_pretraining/tests",
    "03_alignment/tests",
    "04_inference_eval/tests",
]

# --- Script runner: ty ---
# ty enforces strict type-checking before execution.
# Usage:
#   ty run <script.py>       # type-check then execute
#   ty check                 # type-check entire workspace
