[project]
name = "takkeli-filtering"
version = "0.1.0"
description = "SAE-based data filtering for consciousness concept removal"
requires-python = ">=3.11"
dependencies = [
    "sae-lens>=0.4.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
rocm = [
    "torch>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
