[project]
name = "takkeli-filtering"
version = "0.1.0"
description = "SAE-based data filtering for consciousness concept removal"
requires-python = ">=3.10"
dependencies = [
    "sae-lens>=6.30.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
rocm = [
    "torch>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
